--- a/src/styles/ListActionsWindow.module.css
+++ b/src/styles/ListActionsWindow.module.css
@@ -1,10 +1,9 @@
-.newBookWindow {
+.actionWindow {
     display: flex;
     flex-direction: column;
-    align-self: center;
+    width: 25%;
     align-items: center;
     border: 1px solid black;
     border-radius: 10px;
     padding-bottom: 40px;
-    width: 25%;
 }
